# auto_apms_aerostack2

./: CMakeLists.txt  README.md  package.xml
config/: node_manifest.yaml
src/: set_control_mode.cpp
