<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_apms_aerostack2</name>
  <version>0.0.0</version>
  <description>Plugins for interfacing with Aerostack2</description>
  <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>auto_apms_behavior_tree_core</depend>
  <depend>as2_msgs</depend>

  <!-- Required for node plugins reused in node manifest -->
  <depend>auto_apms_behavior_tree</depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
